# iiif_content_state_demo

./: Procfile  README.md  pyproject.toml
content-snake/: __init__.py  snake.py
content-snake/content_state/: __init__.py  content_state.py
views/: index.tpl
