[tool.poetry]
name = "content-snake"
version = "0.1.0"
description = "A simple site for creating content state requests from IIIF"
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
